Add config translations and translation datagen.